--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,9 +1,8 @@
-
 .not-front .pane-page-title {
   text-align: center;
   padding: 3px 0;
   background: #ABC4DE; 
-  margin: 0 -30px 20px -30px;
+  margin: 0 -30px 0 -30px;
   
   h1 {
   display: inline;
