--- a/sass/modules/_checkout.scss
+++ b/sass/modules/_checkout.scss
@@ -1,4 +1,7 @@
 .page-checkout {
+	.customer_profile_billing > .panel-body > .form-item-customer-profile-billing-addressbook {
+		display: none;
+	}
 	.street-block > .form-item-customer-profile-billing-commerce-customer-address-und-0-thoroughfare {
 		display: none;
 	}
