--- a/css/modules/commerce_billy.css
+++ b/css/modules/commerce_billy.css
@@ -44,92 +44,113 @@ body {
 }
 
 /* line 40, ../../sass/modules/commerce_billy.scss */
-.billing, .line-items .view-commerce-line-item-table table {
+.billing {
+  position: relative;
+}
+/* line 43, ../../sass/modules/commerce_billy.scss */
+.billing .customer, .billing .line-items .view-commerce-line-item-table table td, .line-items .view-commerce-line-item-table table .billing td, .billing .customer-shipping {
   border: 2px solid #b9b9b9;
   font-size: 12px;
+  width: 45%;
 }
-/* line 44, ../../sass/modules/commerce_billy.scss */
-.billing .billing-header, .line-items .view-commerce-line-item-table table .billing-header, .line-items .view-commerce-line-item-table table thead th {
+/* line 49, ../../sass/modules/commerce_billy.scss */
+.billing .customer > div > div:first-child, .billing .line-items .view-commerce-line-item-table table td > div > div:first-child, .line-items .view-commerce-line-item-table table .billing td > div > div:first-child, .billing .customer-shipping > div > div:first-child {
   font-weight: bold;
   background: #cccccc;
   padding: 5px;
 }
-/* line 49, ../../sass/modules/commerce_billy.scss */
-.billing .customer, .line-items .view-commerce-line-item-table table .customer, .line-items .view-commerce-line-item-table table td {
-  padding: 5px;
-}
-/* line 52, ../../sass/modules/commerce_billy.scss */
-.billing .customer > div > div, .line-items .view-commerce-line-item-table table .customer > div > div, .line-items .view-commerce-line-item-table table td > div > div {
-  font-size: 0;
-}
-/* line 55, ../../sass/modules/commerce_billy.scss */
-.billing .customer > div > div div, .line-items .view-commerce-line-item-table table .customer > div > div div, .line-items .view-commerce-line-item-table table td > div > div div {
+/* line 54, ../../sass/modules/commerce_billy.scss */
+.billing .customer > div > div:first-child div, .billing .line-items .view-commerce-line-item-table table td > div > div:first-child div, .line-items .view-commerce-line-item-table table .billing td > div > div:first-child div, .billing .customer-shipping > div > div:first-child div {
   font-size: 12px;
 }
-/* line 58, ../../sass/modules/commerce_billy.scss */
-.billing .customer > div > div div > div > div > div:first-child > div:first-child, .line-items .view-commerce-line-item-table table .customer > div > div div > div > div > div:first-child > div:first-child, .line-items .view-commerce-line-item-table table td > div > div div > div > div > div:first-child > div:first-child {
+/* line 57, ../../sass/modules/commerce_billy.scss */
+.billing .customer > div > div:first-child div > div > div > div:first-child > div:first-child, .billing .line-items .view-commerce-line-item-table table td > div > div:first-child div > div > div > div:first-child > div:first-child, .line-items .view-commerce-line-item-table table .billing td > div > div:first-child div > div > div > div:first-child > div:first-child, .billing .customer-shipping > div > div:first-child div > div > div > div:first-child > div:first-child {
   font-weight: bold;
 }
+/* line 60, ../../sass/modules/commerce_billy.scss */
+.billing .customer > div > div:first-child div div, .billing .line-items .view-commerce-line-item-table table td > div > div:first-child div div, .line-items .view-commerce-line-item-table table .billing td > div > div:first-child div div, .billing .customer-shipping > div > div:first-child div div {
+  font-weight: normal;
+}
+/* line 65, ../../sass/modules/commerce_billy.scss */
+.billing .customer > div > div > div, .billing .line-items .view-commerce-line-item-table table td > div > div > div, .line-items .view-commerce-line-item-table table .billing td > div > div > div, .billing .customer-shipping > div > div > div {
+  padding: 2px 5px;
+}
+/* line 70, ../../sass/modules/commerce_billy.scss */
+.billing .customer-shipping {
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+/* line 75, ../../sass/modules/commerce_billy.scss */
+.billing .customer-shipping .field-name-field-end-customer,
+.billing .customer-shipping .field-name-field-purchase-order-number,
+.billing .customer-shipping .field-name-field-packaging-comment,
+.billing .customer-shipping .field-name-field-shipping-label-comment {
+  display: none;
+}
 
-/* line 66, ../../sass/modules/commerce_billy.scss */
+/* line 84, ../../sass/modules/commerce_billy.scss */
 .line-items {
   margin-top: 100px;
 }
-/* line 70, ../../sass/modules/commerce_billy.scss */
+/* line 88, ../../sass/modules/commerce_billy.scss */
 .line-items .view-commerce-line-item-table table {
+  border: 2px solid #b9b9b9;
+  font-size: 12px;
   width: 100%;
   line-height: 1.2em;
   border-collapse: collapse;
 }
-/* line 76, ../../sass/modules/commerce_billy.scss */
+/* line 95, ../../sass/modules/commerce_billy.scss */
 .line-items .view-commerce-line-item-table table thead th {
+  font-weight: bold;
+  background: #cccccc;
+  padding: 5px;
   text-align: center;
 }
-/* line 81, ../../sass/modules/commerce_billy.scss */
+/* line 102, ../../sass/modules/commerce_billy.scss */
 .line-items .view-commerce-line-item-table table td {
   text-align: center;
   height: 30px;
   border-bottom: 1px solid #e7e7e7;
+  padding: 0 5px;
 }
-/* line 88, ../../sass/modules/commerce_billy.scss */
+/* line 110, ../../sass/modules/commerce_billy.scss */
 .line-items .view-commerce-line-item-table table .views-field-commerce-total {
   text-align: right;
   width: 200px;
 }
-/* line 93, ../../sass/modules/commerce_billy.scss */
+/* line 115, ../../sass/modules/commerce_billy.scss */
 .line-items .view-commerce-line-item-table table .views-field-line-item-title-1 {
   text-align: left;
   width: 300px;
 }
-/* line 98, ../../sass/modules/commerce_billy.scss */
-.line-items .view-commerce-line-item-table table .views-field-line-item-label {
-  display: none;
-}
-/* line 104, ../../sass/modules/commerce_billy.scss */
+/* line 122, ../../sass/modules/commerce_billy.scss */
 .line-items .order-total table {
   font-weight: bold;
   width: 100%;
 }
-/* line 108, ../../sass/modules/commerce_billy.scss */
+/* line 126, ../../sass/modules/commerce_billy.scss */
 .line-items .order-total table td.component-title {
   text-align: right;
   padding-right: 5px;
   font-size: 12px;
 }
-/* line 114, ../../sass/modules/commerce_billy.scss */
+/* line 132, ../../sass/modules/commerce_billy.scss */
 .line-items .order-total table td.component-total {
+  padding-right: 5px;
   text-align: right;
   width: 80px;
   background: #cccccc;
 }
 
-/* line 123, ../../sass/modules/commerce_billy.scss */
+/* line 141, ../../sass/modules/commerce_billy.scss */
 .text {
   position: absolute;
   top: 300px;
 }
 
-/* line 128, ../../sass/modules/commerce_billy.scss */
+/* line 146, ../../sass/modules/commerce_billy.scss */
 .invoice-footer {
   border-top: 1px solid #e0e0e0;
   width: 100%;
@@ -141,32 +162,32 @@ body {
   bottom: 0;
 }
 
-/* line 139, ../../sass/modules/commerce_billy.scss */
+/* line 157, ../../sass/modules/commerce_billy.scss */
 .invoice-text {
   margin-top: 50px;
 }
 
-/* line 143, ../../sass/modules/commerce_billy.scss */
+/* line 161, ../../sass/modules/commerce_billy.scss */
 .contextual-links-wrapper {
   display: none;
 }
 
-/* line 147, ../../sass/modules/commerce_billy.scss */
+/* line 165, ../../sass/modules/commerce_billy.scss */
 .invoice-canceled .order-total table {
   border: 2px solid black;
   margin-top: 100px;
 }
 
-/* line 152, ../../sass/modules/commerce_billy.scss */
+/* line 170, ../../sass/modules/commerce_billy.scss */
 .customer .street-block, .line-items .view-commerce-line-item-table table td .street-block {
   overflow: hidden;
 }
-/* line 155, ../../sass/modules/commerce_billy.scss */
+/* line 173, ../../sass/modules/commerce_billy.scss */
 .customer .street-block div.thoroughfare, .line-items .view-commerce-line-item-table table td .street-block div.thoroughfare {
   margin-left: -10px;
 }
 
-/* line 160, ../../sass/modules/commerce_billy.scss */
+/* line 178, ../../sass/modules/commerce_billy.scss */
 .field-name-field-global {
   display: none;
 }
