Add filters to e-Store page

--- a/sass/modules/_estore-submenu.scss
+++ b/sass/modules/_estore-submenu.scss
@@ -1,6 +1,6 @@
-.view-estore {
+.estore-submenu .view-estore {
   display: table;
-  margin: 0 auto;
+  margin: 0 auto 20px auto;
   width: 100%;
 
   >.attachment {
