--- a/sass/modules/_estore-page.scss
+++ b/sass/modules/_estore-page.scss
@@ -4,11 +4,14 @@
     display: none;
   }
 
-  .view-estore {
-    margin-bottom: 20px;
-  }
-
   .pane-page-title {
     margin-bottom: 0;
+  }
+
+  .view-catalog {
+    @include make-xs-column(10);
+    @include make-sm-column(10);
+    @include make-md-column(10);
+    padding: 0;
   }
 }
