--- a/sass/modules/_vendors.scss
+++ b/sass/modules/_vendors.scss
@@ -26,3 +26,39 @@
     }
   }
 }
+
+//Single Vendor Node
+.node-view.node-type-vendor {
+
+  .field-name-body {
+    @include make-xs-column(12);
+    @include make-sm-column(8);
+    @include make-md-column(8);
+    @include make-lg-column(9)
+  }
+
+  .field-name-field-image,
+  .field-name-field-downloads {
+    @include make-xs-column(12);
+    @include make-sm-column(4);
+    @include make-md-column(4);
+    @include make-lg-column(3)
+  }
+  .field-name-field-downloads {
+    @include box-shadow(#A09E9E 2px 2px 10px);
+    border-radius: 10px;
+    margin-top: 10px;
+    padding: 10px;
+
+    .field-label {
+      color: #337ab7;
+      font-weight: 100;
+      text-align: center;
+      padding: 5px 0 15px 0;
+    }
+
+    .field-items a {
+      color: #3F3F3F;
+    }
+  }
+}
